feat: integrasi Swagger UI (L5-Swagger) dan endpoint REST API manajemen user/role
